--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,6 +32,9 @@ dependencies:
   # imageview360: ^1.2.0
   panorama: ^0.0.2
   flutter_cube: ^0.0.6
+  flutter_swiper: ^1.1.6
+  cached_network_image: ^2.3.3
+  zoom_widget: ^0.1.3
   # video_player_360: ^0.1.5
 
 dev_dependencies:
